Corrigo dos errores de travis y añado exclusiones travis
Signed-off-by: turrado <jorge_turrado@hotmail.es>

--- a/.travis.yml
+++ b/.travis.yml
@@ -51,3 +51,13 @@ script:
   - cd check_install/bin
   - ./authserver --version
   - ./worldserver --version
+  
+  ignore:
+  - *.md
+  - cmake/*
+  - contrib/*
+  - dep/*
+  - doc/*
+  - sql/*
+  - *.diff
+  - appveyor.yml
